tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/shifting-80/a/to_b_tproxy/_test_context/VirtualService.2742322366.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - b
  http:
  - route:
    - destination:
        host: b
      weight: 80
    - destination:
        host: tproxy
      weight: 20
